<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:id="@+id/scrollView"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="341dp"
                android:layout_height="49dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_search"
                android:icon="@drawable/ic_search_white"
                app:iconifiedByDefault="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:queryBackground="@android:color/transparent"
                app:queryHint="Pencarian last match" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:fillViewport="true"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchView">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_premier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/bg_text"
                        android:text="@string/premier_league"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/btn_serie_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/bg_text"
                        android:text="@string/serie_a"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/btn_la_liga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/bg_text"
                        android:text="@string/la_liga"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/btn_bundes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/bg_text"
                        android:text="@string/bundes_liga"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/btn_league1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/bg_text"
                        android:text="@string/ligue_1"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/btn_bri_liga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_text"
                        android:text="@string/bri_liga_1"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        style="?android:attr/buttonBarButtonStyle" />

                </LinearLayout>
            </HorizontalScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="-150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintVertical_bias="0.0">

            <View
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/bg_view" />

            <ImageView
                android:layout_width="274dp"
                android:layout_height="329dp"
                android:layout_gravity="end"
                android:layout_marginEnd="-40dp"
                android:contentDescription="@string/image_football"
                android:src="@drawable/football_player" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-20dp"
                android:text="@string/piala_dunia_u20_indonesia"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_text"
                android:text="@string/dibatalkan"
                android:textColor="@color/white"
                android:textSize="21sp" />

        </FrameLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="224dp"
            android:text="@string/last_match"
            android:textColor="@color/purple_dark"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/today_match"
            android:layout_marginTop="-30dp"
            android:textColor="@color/purple_dark"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <View
            android:id="@+id/bg_today_empty"
            android:layout_width="334dp"
            android:layout_height="206dp"
            android:background="@drawable/bg_empty"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/tv_today_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/hari_ini_tidak_ada_pertandingan"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_today_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="7dp"
            android:paddingEnd="7dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:itemCount="3"
            tools:listitem="@layout/item_row_match_today" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_last_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:spanCount="2"
            tools:listitem="@layout/item_row_match" />

        <ProgressBar
            android:id="@+id/progressbar_today"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rv_today_match" />

        <ProgressBar
            android:id="@+id/progressbar_last"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rv_last_match" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>